# js-i18n-language-server

./: .gitignore  .mcp.json  .miserc.toml  .npmrc  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  biome.json  cliff.toml  dist-workspace.toml  hk.pkl  mise.ci.toml  mise.development.toml  mise.toml  package.json  pnpm-lock.yaml  release-plz.toml  release.toml  test.txt  tsconfig.build.json  tsconfig.json
.claude/commands/: commit.md  task-create.md  task-start.md
.claude/rules/: comments.md  queries.md  rust.md  src-config.md  src-ide.md  src-input.md  src-syntax.md  tests.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  release-plz.yml  release.yml
coverage/: tarpaulin-report.html
docs/: ADR_TEMPLATE.md  ASANA_GUIDE_FOR_AI.md  CLAUDE.md  README.md  configuration.md  lsp-features.md  prd.md  supported-syntax.md
docs/adr/: ADR-001-technology-stack-selection.md  ADR-002-test-strategy-and-coverage.md  ADR-003-file-id-management-strategy.md  ADR-003-incremental-implementation-approach.md  ADR-004-tree-sitter-query-strategy.md
docs/design/l1-system/: architecture.md
docs/frameworks/: i18next.md  next-intl.md  svelte-i18n.md  vue-i18n.md
docs/guides/: asana-guide.md  commit-convention.md  development-environment.md
docs/templates/: adr-template.md  design-doc-l1-system.md  design-doc-l2-service.md  design-doc-l3-component.md  prd-template.md
examples/: bench_indexing.rs  sample_translations.json  sample_usage.rs
playground/: README.md
playground/env/nvim/: config.lua
playground/i18next/: getFixedT.ts  package.json  selectorApi.ts
playground/i18next/locales/en/: translation.json
playground/i18next/locales/ja/: translation.json
playground/namespace-demo/: .js-i18n.json  README.md  default-namespace.tsx  namespace-basic.tsx  namespace-separator.tsx  package.json  selector-api.tsx
playground/namespace-demo/locales/en/: common.json  errors.json  translation.json
playground/namespace-demo/locales/ja/: common.json  errors.json  translation.json
playground/next-intl/: getTranslations.tsx  package.json  richText.tsx  useTranslations.tsx
playground/next-intl/messages/: en.json  ja.json
playground/nvim/: playground.lua
playground/react-i18next/: Trans.tsx  Translation.tsx  keyPrefix.tsx  package.json  selectorApi.tsx  useTranslation.tsx
playground/react-i18next-custom-settings/: .js-i18n.json  custom-key-separator.tsx  namespace-separator.tsx  package.json
playground/react-i18next-custom-settings/locales/en/: translation.json
playground/react-i18next-custom-settings/locales/ja/: translation.json
playground/react-i18next/locales/en/: translation.json
playground/react-i18next/locales/ja/: translation.json
playground/svelte-i18n/: .js-i18n.json  index.html  package-lock.json  package.json
playground/svelte-i18n/locales/: en.json  ja.json
playground/svelte-i18n/src/: App.svelte  BasicUsage.svelte  FormatVariants.svelte  Interpolation.svelte  NestedKeys.svelte  ObjectForm.svelte  ReactiveUsage.svelte  advanced.js  i18n.js  main.js
playground/vue-i18n/: .js-i18n.json  index.html  package-lock.json  package.json
playground/vue-i18n/locales/: en.json  ja.json
playground/vue-i18n/src/: App.vue  CompositionApi.vue  ObjectAccess.vue  OptionsApi.vue  TemplatePatterns.vue  i18n.js  main.js
queries/: svelte-i18n.scm  vue-i18n.scm
queries/javascript/: i18next.scm  next-intl.scm  react-i18next.scm
queries/tsx/: i18next.scm  react-i18next.scm
queries/typescript/: i18next.scm  next-intl.scm  react-i18next.scm
src/: analyzer.rs  analyzer.test.ts  analyzer.ts  config.rs  db.rs  framework.rs  ide.rs  indexer.rs  interned.rs  ir.rs  lib.rs  main.rs  main.ts  query.rs  server.ts  syntax.rs  test_utils.rs  translation.rs  types.rs  utils.ts
src/analyzer/: error.rs  extractor.rs  i18n_analyzer.rs  mod.rs  query_loader.rs  scope.rs  types.rs
src/config/: loader.rs  manager.rs  matcher.rs  mod.rs  types.rs
src/framework/: base.ts  i18next.rs  index.ts  next_intl.rs  svelte_i18n.rs  vue_i18n.rs
src/ide/: backend.rs  code_actions.rs  completion.rs  diagnostics.rs  goto_definition.rs  handlers.rs  hover.rs  key_match.rs  mod.rs  namespace.rs  plural.rs  references.rs  rename.rs  state.rs  virtual_text.rs
src/ide/handlers/: code_action.rs  document_sync.rs  execute_command.rs  features.rs  lifecycle.rs  mod.rs  workspace.rs
src/indexer/: mod.rs  types.rs  workspace.rs
src/input/: mod.rs  source.rs  translation.rs
src/ir/: key_usage.rs  mod.rs  translation.rs
src/queries/: i18next.scm  next-intl.scm  react-i18next.scm
src/syntax/: mod.rs  position_map.rs  svelte.rs  vue.rs
src/syntax/analyzer/: extractor.rs  mod.rs  query_loader.rs  scope.rs  types.rs
test/fixtures/javascript/: simple_t.js
test/fixtures/react/: use_translation.jsx
test/fixtures/typescript/: typed_translations.ts
tests/: debug_tests.rs  hover_test.rs  integration_test.rs  integration_tests.rs  utils.ts
tests/fixtures/analyzer/key-prefix/i18next/: multiple-t-functions.jsx  normal.js  normal.jsx
tests/fixtures/analyzer/key-prefix/next-intl/: multiple-t-functions.jsx  normal.jsx
tests/fixtures/edge_cases/: dynamic_keys.js
tests/fixtures/javascript/: basic_i18next.js  react_hooks.js
tests/fixtures/jsx/: trans_component.jsx
tests/fixtures/performance/: large_file.js
tests/fixtures/tsx/: mixed_patterns.tsx
tests/fixtures/typescript/: complex_scopes.ts  mixed_libraries.ts
