[package]
name = "rust-lsp-tutorial"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing-subscriber = "0.3"
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"
