[package]
name = "js-i18n-language-server"
version = "0.2.0"
edition = "2024"
description = "Language Server for JavaScript/TypeScript i18n (i18next, next-intl, react-intl)"
license = "MIT"
repository = "https://github.com/nabekou29/js-i18n-language-server"
keywords = [
  "lsp",
  "language-server",
  "i18n",
  "javascript",
  "typescript",
  "i18next",
  "next-intl",
  "react-intl",
  "internationalization",
]
categories = ["development-tools"]
readme = "README.md"

[dependencies]
futures = "0.3"
globset = "0.4.16"
ignore = "0.4"
num_cpus = "1.16"
salsa = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tree-sitter = "0.26"
tree-sitter-javascript = "0.25"
tree-sitter-json = "0.24"
tree-sitter-typescript = "0.23"
jsonc-parser = { version = "0.28", features = ["cst"] }
unicode-width = "0.2.2"

[dev-dependencies]
googletest = "0.14"
rstest = "0.26"
tempfile = "3"
tokio-test = "0.4"

[lints.rust]
# === Forbidden ===
unsafe_code = "forbid"
future_incompatible = { level = "deny", priority = -1 }

# === Required ===
unused_must_use = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }

# === Recommended ===
missing_debug_implementations = "warn"
missing_copy_implementations = "warn"
unreachable_pub = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"

# === Advanced ===
single_use_lifetimes = "warn"
unused_lifetimes = "warn"
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"

[lints.clippy]
# === Group rules ===
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

# === Restriction (selected) ===
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
float_arithmetic = "deny"

# === Security ===
transmute_ptr_to_ptr = "forbid"
cast_ptr_alignment = "forbid"

# === Output control ===
print_stdout = "deny"
print_stderr = "deny"
dbg_macro = "deny"

# === Performance ===
large_stack_arrays = "deny"
large_types_passed_by_value = "deny"
redundant_clone = "deny"

# === Function design ===
too_many_arguments = "deny"
cognitive_complexity = "deny"

# === Allowed ===
multiple_crate_versions = "allow"
missing_errors_doc = "allow"
missing_docs_in_private_items = "allow"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
